--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,15 @@
-/*************nav**************/
+/*************nav start**************/
+.sub{
+    display: none;
+    color: #ed3267;
+    cursor: pointer;
+}
 #nav{
+    position: fixed;
+    left: 0;
+    top: 0px;
+    right: 0;
+    z-index: 1;
     height: 75px;
     background: #fff;
     -webkit-box-shadow: 0 0 12px 0 #d5d5d5;
@@ -26,8 +36,9 @@
     width: 45px;
     margin: 0 5px;
     font-weight: bold;
+    cursor: pointer;
 }
-.active{
+#nav .active{
     background: #ed3267;
     color: #fff;
 }
@@ -49,9 +60,10 @@
     margin: 9px 0;
     background: #ed3267;
 }
-/*******************banner*******************/
+/******************nav end *************/
+/*******************banner start*******************/
 #banner{
-    height: 565px;
+    height: 575px;
     background: url("../img/sky.jpg") no-repeat 0px 0/cover;
     position: relative;
 }
@@ -80,6 +92,7 @@
     font-size: 40px;
     color: #ffffff;
     font-weight: bold;
+    animation: flip 1s linear;
 }
 #content button{
     width: 95px;
@@ -92,11 +105,12 @@
     background: #ed3267;
     color: #ffffff;
 }
-/*******about******************************/
+/*****************banner end*************/
+/*******about  start******************************/
 #about{
     overflow: hidden;
 }
-#about h1{
+#about h1,#project h1{
     color: #ed3267;
     margin-top: 70px;
     margin-bottom: 40px;
@@ -174,7 +188,8 @@
     border-bottom: 3px solid #ccc;
     margin-bottom: 12px;
 }
-/******************skills**************/
+/**********about end*****************/
+/********skills start**************/
 #skills{
     background: url("../img/skills-bg.jpg") no-repeat 50% 0/cover fixed;
 }
@@ -193,6 +208,8 @@
     color: #ed3267;
     margin-bottom: 10px;
 }
+/*******skills end************/
+/**********my-skills start***********/
 #my-skills h1{
     color: #ed3267;
     margin-top: 70px;
@@ -205,12 +222,29 @@
 }
 #my-skills p{
     border-bottom: 3px solid #000;
-    margin-bottom:30px;
 }
 .skills-bg{
     height: 300px;
     background: url("../img/skills-bg.jpg") no-repeat 50% 0/cover fixed;
 }
+#my-skills .active{
+    background: #fff;
+}
+/**********my-skills end***********/
+/***********project start***************/
+#container{
+    width: 100%;
+    height: 600px;
+}
+/**********project end************/
+/*****contact-me start***********/
+#contact-me{
+    padding: 70px 0;
+    background: #ed3267;
+    color: #fff;
+    font-weight: bold;
+}
+/*****contact-me end***********/
 
 @media(max-width: 768px){
     #menu{
@@ -228,6 +262,9 @@
     #about button{
         width: 100%;
         margin: 60px 0;
+    }
+    #skills .fa{
+        margin: 10px;
     }
 }
 
