--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,9 @@
+body{ 
+-webkit-user-select:none; 
+-moz-user-select:none; 
+-ms-user-select:none; 
+user-select:none;
+}
 .line{
     text-align: center;
     margin-bottom: 30px;
