--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,57 @@
+/*********spinner start**********/
+body{
+    position: relative;
+}
+.spinner {
+    background: #ffffff;
+    margin: 0px auto 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+    text-align: center;
+}
+.spinner > div {
+    width: 30px;
+    height: 30px;
+    background-color:  #ed3267;
+    margin: 300px auto;
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: bouncedelay 1.4s infinite ease-in-out;
+    animation: bouncedelay 1.4s infinite ease-in-out;
+    /* Prevent first frame from flickering when animation starts */
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+.spinner .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+}
+
+@-webkit-keyframes bouncedelay {
+    0%, 80%, 100% { -webkit-transform: scale(0.0) }
+    40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes bouncedelay {
+    0%, 80%, 100% {
+        transform: scale(0.0);
+        -webkit-transform: scale(0.0);
+    } 40% {
+          transform: scale(1.0);
+          -webkit-transform: scale(1.0);
+      }
+}
+/*********spinner end**********/
 /*************nav start**************/
 .sub{
     display: none;
@@ -93,6 +147,15 @@
     color: #ffffff;
     font-weight: bold;
     animation: flip 1s linear;
+}
+#slogan{
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+    margin: 10px 0;
+}
+#slogan span{
+    color: #ed3267;
 }
 #content button{
     width: 95px;
@@ -255,6 +318,12 @@
     }
     #banner{
         background-position: center;
+    }
+    #content p{
+        font-size: 20px;
+    }
+    #slogan{
+        font-size: 16px;
     }
     #content{
         width: 115px;
