--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+#ht{
+    display: none;
+}
 /*********spinner start**********/
 body{
     position: relative;
@@ -92,6 +95,12 @@ body{
     font-weight: bold;
     cursor: pointer;
 }
+.scroll{
+    color: #ed3267;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
 #nav .active{
     background: #ed3267;
     color: #fff;
@@ -163,6 +172,10 @@ body{
     margin: 10px;
     background: #ffffff;
     border: 0;
+    padding: 0;
+}
+#content a{
+    line-height: 40px;
 }
 #content .selected{
     background: #ed3267;
@@ -173,7 +186,7 @@ body{
 #about{
     overflow: hidden;
 }
-#about h1,#project h1{
+#about h1{
     color: #ed3267;
     margin-top: 70px;
     margin-bottom: 40px;
@@ -241,6 +254,11 @@ body{
     color: #fff;
     border: 0;
     margin: 150px;
+    padding: 0;
+}
+#about a{
+    color: #fff;
+    line-height: 40px;
 }
 .self-info{
     padding: 0;
@@ -298,6 +316,10 @@ body{
 #container{
     width: 100%;
     height: 600px;
+}
+#project h1{
+    color: #ed3267;
+    padding: 70px 0 20px 0;
 }
 /**********project end************/
 /*****contact-me start***********/
